--- a/css/about.css
+++ b/css/about.css
@@ -11,6 +11,16 @@ nav, #description {
 	background-color: orange;
 }
 
+#description {
+	font-family: 'Lato', sans-serif;
+	font-size: 20px;
+	color: orange;
+	text-decoration: none;
+	text-align: left;
+	padding: 10px 0;
+	/*background-color: orange;*/
+}
+
 nav ul {
 	list-style: none;
 }
