--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #E0FFFF;
 }
-nav, #description {
+nav {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	color: #E0FFFF;
