--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,7 @@ nav {
 #description {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
-	color: orange;
+	/*color: orange;*/
 	text-decoration: none;
 	text-align: left;
 	padding: 10px 0;
