--- a/css/about.css
+++ b/css/about.css
@@ -14,11 +14,11 @@ nav {
 #description {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
-	/*color: orange;*/
+	color: #E0FFFF;
 	text-decoration: none;
 	text-align: left;
 	padding: 10px 0;
-	/*background-color: orange;*/
+	background-color: orange;
 }
 
 nav ul {
