--- a/css/about.css
+++ b/css/about.css
@@ -11,7 +11,7 @@ nav {
 	background-color: orange;
 }
 
-#description, #wrapper {
+#description {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	color: #E0FFFF;
