--- a/css/about.css
+++ b/css/about.css
@@ -1,22 +1,12 @@
 body {
 	background-color: #E0FFFF;
 }
-nav {
+nav, #description {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	color: #E0FFFF;
 	text-decoration: none;
 	text-align: center;
-	padding: 10px 0;
-	background-color: orange;
-}
-
-#description {
-	font-family: 'Lato', sans-serif;
-	font-size: 20px;
-	color: #E0FFFF;
-	text-decoration: none;
-	text-align: left;
 	padding: 10px 0;
 	background-color: orange;
 }
