--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #E0FFFF;
 }
+
 nav, #description {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
@@ -9,6 +10,10 @@ nav, #description {
 	text-align: center;
 	padding: 10px 0;
 	background-color: orange;
+}
+
+#hey{
+	font-size: 30px;
 }
 
 nav ul {
