--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@ nav {
 	color: orange;
 	text-decoration: none;
 	text-align: center;
-	padding: -15px 0;
+	/*padding: -15px 0;*/
 	/*background-color: orange;*/
 }
 
