--- a/css/about.css
+++ b/css/about.css
@@ -8,7 +8,7 @@ nav {
 	color: #E0FFFF;
 	text-decoration: none;
 	text-align: center;
-	padding: 5px 0;
+	padding: none;
 	background-color: orange;
 }
 
