--- a/css/about.css
+++ b/css/about.css
@@ -12,6 +12,11 @@ nav {
 	background-color: orange;
 }
 
+#pic {
+	text-align: center;
+	padding: 20px;
+}
+
 #hey, #description {
 	font-family: 'Lato', sans-serif;
 	color: orange;
