--- a/css/about.css
+++ b/css/about.css
@@ -12,13 +12,8 @@ nav {
 	background-color: orange;
 }
 
-#pic-one {
-	text-align: left;
-	padding: 10px;
-}
-
-#pic-two {
-	text-align: right;
+#pic-one, #pic-two {
+	text-align: center;
 	padding: 10px;
 }
 
