--- a/css/about.css
+++ b/css/about.css
@@ -12,10 +12,16 @@ nav {
 	background-color: orange;
 }
 
-#pic {
+#pic-one {
 	display: inline-block;
-    	padding-left: 40px;
-    	padding-right: 40px;
+    	padding-left: 60px;
+    	padding-right: 10px;
+}
+
+#pic-one {
+	display: inline-block;
+    	padding-left: 10px;
+    	padding-right: 60px;
 }
 
 #hey, #description {
