--- a/css/about.css
+++ b/css/about.css
@@ -18,7 +18,7 @@ nav {
     	padding-right: 10px;
 }
 
-#pic-one {
+#pic-two {
 	/*display: inline-block;*/
     	padding-left: 10px;
     	padding-right: 100px;
