--- a/css/about.css
+++ b/css/about.css
@@ -12,16 +12,9 @@ nav {
 	background-color: orange;
 }
 
-#pic-one {
-	/*display: inline-block;*/
-    	padding-left: 100px;
-    	padding-right: 10px;
-}
-
-#pic-two {
-	/*display: inline-block;*/
-    	padding-left: 10px;
-    	padding-right: 100px;
+#pic {
+	display: block;
+    	margin: 0 auto;
 }
 
 #hey, #description {
