--- a/css/about.css
+++ b/css/about.css
@@ -4,11 +4,11 @@ body {
 
 nav {
 	font-family: 'Lato', sans-serif;
-	font-size: 20px;
+	font-size: 15px;
 	color: #E0FFFF;
 	text-decoration: none;
 	text-align: center;
-	padding: none;
+	padding: 10px;
 	background-color: orange;
 }
 
