--- a/css/projects.css
+++ b/css/projects.css
@@ -3,11 +3,11 @@ body {
 }
 nav {
 	font-family: 'Lato', sans-serif;
-	font-size: 20px;
+	font-size: 17px;
 	color: #E0FFFF;
 	text-decoration: none;
 	text-align: center;
-	padding: 10px 0;
+	padding: none;
 	background-color: orange;
 }
 
