--- a/css/djassi.css
+++ b/css/djassi.css
@@ -7,6 +7,15 @@ header {
 body {
 	background-color: #E0FFFF;
 }
+
+footer {
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
+	text-align: center;
+	color: orange;
+	font-size: 10px;
+}
+
 nav {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
