--- a/css/djassi.css
+++ b/css/djassi.css
@@ -13,7 +13,8 @@ footer {
 	text-decoration: none;
 	text-align: center;
 	color: orange;
-	font-size: 10px;
+	font-size: 15px;
+	padding-top: 200px;
 }
 
 nav {
