--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,14 @@
 body {
 	background-color: #E0FFFF;
 }
+footer {
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
+	text-align: center;
+	color: orange;
+	font-size: 15px;
+	padding-top: 250px;
+}
 nav {
 	font-family: 'Lato', sans-serif;
 	font-size: 17px;
