--- a/css/about.css
+++ b/css/about.css
@@ -31,8 +31,7 @@ footer {
 	color: orange;
 	text-decoration: none;
 	text-align: center;
-	/*padding: -15px 0;*/
-	/*background-color: orange;*/
+	padding: none;
 }
 
 #hey {
