--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,23 @@
 body {
 	background-color: #E0FFFF;
 }
+#contact_info {
+	list-style: none;
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
+	text-align: center;
+	color: orange;
+	font-size: 15px;
+	padding-top: 0px;
+}
+#contact_title {
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
+	text-align: center;
+	color: orange;
+	font-size: 25px;
+	padding-top: 0px;
+}
 footer {
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
@@ -31,6 +48,6 @@ a {
 	color: #E0FFFF;
 	text-decoration: none;
 }
-nav a.selected, nav a:hover {
+nav a.selected, nav a:hover, {
   color: #00BFFF;
 }
