--- a/css/contact.css
+++ b/css/contact.css
@@ -18,6 +18,9 @@ body {
 	font-size: 25px;
 	padding-top: 0px;
 }
+#link {
+	color: orange;
+}
 footer {
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
