--- a/css/gallery.css
+++ b/css/gallery.css
@@ -32,21 +32,21 @@ a {
 	text-decoration: none;
 }
 nav a.selected, nav a:hover {
-  color: #00BFFF;
+  	color: #00BFFF;
 }
 
 #gallery {
-  list-style: none;
+  	list-style: none;
 }
 
 #gallery li {
-  float: center;
-  text-decoration: none;
+	margin: 2.5%;
+  	text-decoration: none;
 }
 
 #gallery li p{
-  padding: 7px;
-  font-size: 18px;
-  color: orange;
-  font-family: 'Lato', sans-serif;
+  	padding: 7px;
+  	font-size: 18px;
+  	color: orange;
+  	font-family: 'Lato', sans-serif;
 }
