--- a/css/gallery.css
+++ b/css/gallery.css
@@ -37,7 +37,7 @@ nav a.selected, nav a:hover {
 
 #gallery li {
 	margin: 1.5%;
-	float: left;
+	/*float: left;*/
   	text-decoration: none;
   	list-style: none;
 }
