--- a/css/contact.css
+++ b/css/contact.css
@@ -19,7 +19,7 @@ body {
 	padding-top: 0px;
 }
 #link {
-	color: orange;
+	color: #00BFFF;
 }
 footer {
 	font-family: 'Lato', sans-serif;
@@ -52,6 +52,6 @@ a {
 	text-decoration: none;
 }
 
-nav a.selected, nav a:hover, #link.selected, #link:hover{
+nav a.selected, nav a:hover {
   color: #00BFFF;
 }
