--- a/css/projects.css
+++ b/css/projects.css
@@ -34,3 +34,20 @@ a {
 nav a.selected, nav a:hover {
   color: #00BFFF;
 }
+
+section ul {
+	list-style: none;
+}
+
+#title {
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
+	color: orange;
+	font-size: 20px;
+}
+#description {
+	font-family: 'Lato', sans-serif;
+	text-decoration: none;
+	color: orange;
+	font-size: 15px;
+}
