--- a/css/projects.css
+++ b/css/projects.css
@@ -42,7 +42,7 @@ section ul {
 #title {
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
-	color: orange;
+	color: #00BFFF;
 	font-size: 20px;
 }
 #description {
