--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,9 @@ body {
 }
 
 nav {
+	position: fixed;
+	left: 0px;
+	right: 0px;
 	font-family: 'Lato', sans-serif;
 	font-size: 17px;
 	color: #E0FFFF;
